@@ -4,6 +4,9 @@ Revision history for Perl extension Math::Prime::Util.
     - Add RiemannZeta function.  We used this before for Riemann R, but now
       it is exported and should be accurate for small numbers (it was only
       used for integers > 40 before).
+    - add prime_set_config(), including ability to set assume_rh to let all
+      functions assume the Riemann Hypothesis.
+    - Use the Schoenfeld bound for Pi(x) (x large) if assume_rh is true.
 
 0.11  23 July 2012
     - Turn off threading tests on Cygwin, as threads on some Cygwin platforms
